--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="icon"
       href="otter/ottericon2.png"
     />
-    <title>OTTER 3.0 - JavaScript</title>
+    <title>The Krion Conquest</title>
 
     <style></style>
   </head>
