--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <!-- mape -->
 
-    <script src="./Level one.js"></script>
-    <script src="./Level two.js"></script>
+    <script src="./maps/Level one.js"></script>
+    <script src="./maps/Level two.js"></script>
 
     <!-- okvir -->
 
@@ -61,9 +61,9 @@
     <script src="otter/lib-06-main.js"></script>
 
     <!-- vlastiti kod -->
-    <script src="jsKod/kod_00-staticka.js"></script>
-    <script src="jsKod/kod_01-likovi.js"></script>
-    <script src="jsKod/kod_02-postavke.js"></script>
-    <script src="jsKod/kod_03-logikaIgre.js"></script>
+    <script src="scripts/kod_00-staticka.js"></script>
+    <script src="scripts/kod_01-likovi.js"></script>
+    <script src="scripts/kod_02-postavke.js"></script>
+    <script src="scripts/kod_03-logikaIgre.js"></script>
   </body>
 </html>
